applets/battery: consistently indicate when in non-default power profile

- fix current profile indicator out of sync betweeen multiple applet instances
- indicate when power profile was manually changed from outside the applet, eg powerprofilesctl
- indicate when power profile was manually set to balanced if this is not the default for the current power state
- don't indicate profile holds if the profile is the default for the current power state anyway

where indicate = show the applet as relevant, and use a special icon for the compact representation.

BUG: 485610